--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "lucide-react": "^0.541.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -37,7 +38,7 @@
   "browserslist": {
     "production": [
       "iOS >= 9",
-      "Safari >= 9", 
+      "Safari >= 9",
       "Android >= 4.4",
       "> 0.2%",
       "not dead"
